<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_12sdp"
            android:orientation="vertical"
            android:background="@color/bluetheme">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/important_alert"
                android:gravity="center_horizontal"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/white">
            </TextView>
        </LinearLayout>
        <TextView
            android:id="@+id/tvCommonDialogLineOne"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_11sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:padding="@dimen/_4sdp"
            android:lineSpacingExtra="@dimen/_1sdp"
            android:text="@string/are_you_sure_n_you_want_to_log_out"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="@dimen/_11sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp">
        <LinearLayout
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal"
            android:background="@drawable/background_button_login">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:paddingVertical="@dimen/_9sdp"
                android:paddingHorizontal="@dimen/_35sdp"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal"
            android:background="@drawable/background_button_login">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_9sdp"
                android:paddingHorizontal="@dimen/_35sdp"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>