<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.tonictrader.tonictrades.auth.login.signup.viewmodel.SigupViewmodel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.login.signup.SignupActivity">






    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/background_edit_text"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/signUpForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@color/transparent_real"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/tonic"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_18sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:paddingBottom="@dimen/_8sdp"
                    android:text="@string/trades"
                    android:textColor="#00EF1D"
                    android:textSize="@dimen/_18sdp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_a_free_account"
                android:textColor="@color/dark_gray">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutLineStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/bluetheme"
                android:padding="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd="@dimen/_12sdp"

                app:boxCornerRadiusTopStart="@dimen/_12sdp"
                app:boxStrokeColor="@color/bluetheme"
                app:hintTextColor="@color/bluetheme">

                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="Enter Your Name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12ssp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutLineStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/bluetheme"
                android:padding="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd="@dimen/_12sdp"

                app:boxCornerRadiusTopStart="@dimen/_12sdp"
                app:boxStrokeColor="@color/pink"
                app:hintTextColor="@color/black">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="Enter Your Email Address"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_12ssp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:visibility="visible"
                android:id="@+id/sendOtpLayout"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextOutLineStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:outlineSpotShadowColor="@color/pink"

                    app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_12sdp"
                    android:padding="@dimen/_10sdp"
                    app:boxCornerRadiusTopStart="@dimen/_12sdp"
                    app:boxStrokeColor="@color/pink"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/edtPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@null"
                        android:fontFamily="@font/lato_regular"
                        android:hint="@string/number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/_12ssp">

                    </EditText>


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutVerifyOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="5">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextOutLineStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:outlineSpotShadowColor="@color/pink"

                    app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_12sdp"
                    app:boxCornerRadiusTopStart="@dimen/_12sdp"
                    app:boxStrokeColor="@color/pink"
                    app:hintTextColor="@color/black">

                    <EditText
                        android:id="@+id/edtOTP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@null"
                        android:fontFamily="@font/lato_regular"
                        android:hint="@string/enter_otp"
                        android:inputType="number"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/_12ssp">

                    </EditText>


                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutLineStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/pink"
                android:padding="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd="@dimen/_12sdp"
                app:boxCornerRadiusTopStart="@dimen/_12sdp"
                app:boxStrokeColor="@color/pink"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/black">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/enter_your_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_12ssp">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextOutLineStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/pink"
                android:padding="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd="@dimen/_12sdp"
                app:boxCornerRadiusTopStart="@dimen/_12sdp"
                app:boxStrokeColor="@color/pink"
                app:hintTextColor="@color/black">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:fontFamily="@font/lato_regular"
                    android:hint="@string/confirm_your_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/_12ssp">

                </EditText>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:background="@drawable/background_button_login"
                android:fontFamily="@font/lato_bold"
                android:paddingHorizontal="@dimen/_40sdp"
                android:singleLine="true"
                android:text="Next "
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:id="@+id/testZipcode"
                android:gravity="center"
                android:textSize="@dimen/_11sdp"
                android:text="@string/by_clicking_on_login_button_you_will_agree_to_our"
                android:textColor="@color/black" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/terms_u0026_conditions"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:id="@+id/termsLayout"
                    android:textColor="@color/bluetheme" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/and"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPolicy"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/privacy_policy"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:textColor="@color/bluetheme" />

            </LinearLayout>
            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:padding="@dimen/_3sdp"
                android:text="@string/terms_amp_condition"
                android:textColor="@color/pink" />-->
        </LinearLayout>



    </RelativeLayout>

</LinearLayout>
</layout>