<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"

    tools:context=".auth.login.VerifyOtpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@drawable/background_edit_text"
        tools:context=".customerapp.auth.view.OtpVerificationActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_8sdp"

            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_35sdp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:contentDescription="TODO">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_20sdp"
                android:padding="@dimen/_8sdp"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_bold"
                android:gravity="center">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/numberText"
                android:text="@string/otp_has_been_sent_to_number_n"
                android:fontFamily="@font/lato_regular"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_8sdp"
                android:textSize="@dimen/_12sdp">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/lato_regular"
                    android:text="Verification Code"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textSize="@dimen/_12sdp">
                </TextView>




                <com.chaos.view.PinView
                    android:id="@+id/firstPinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"

                    android:inputType="number"
                    android:padding="@dimen/_4sdp"
                    android:textColor="@color/bluetheme"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:fontFamily="@font/lato_bold"
                    app:cursorColor="@color/bluetheme"
                    app:cursorWidth="@dimen/_1sdp"
                    android:itemBackground="@color/white"
                    app:hideLineWhenFilled="false"
                    app:itemCount="6"
                    app:itemHeight="@dimen/_40sdp"
                    app:itemRadius="@dimen/_6sdp"
                    app:itemSpacing="@dimen/_8sdp"
                    app:itemWidth="@dimen/_40sdp"
                    app:lineColor="@color/teal_200"
                    app:lineWidth="@dimen/_1sdp"
                    app:viewType="rectangle" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/resendLayout"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:fontFamily="@font/lato_regular"
                        android:gravity="center_vertical"
                        android:text="Didn't receive OTP ?"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/btnResendOTP"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="@dimen/_20sdp"
                            android:layout_marginEnd="@dimen/_4sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:src="@drawable/telegram"
                            android:contentDescription="TODO">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_12sdp"
                            android:text="@string/resend_otp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:fontFamily="@font/lato_regular">
                        </TextView>



                    </LinearLayout>




                </RelativeLayout>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVerifyNumber"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/background_button_login"
                android:fontFamily="@font/lato_bold"
                android:paddingHorizontal="@dimen/_40sdp"
                android:hint="Verify \u0026 Proceed"
                android:textColorHint="@color/white"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />









        </LinearLayout>






    </RelativeLayout>

</LinearLayout>